given  padding and alignment , ui fixes

--- a/src/components/CampaignSettings/CampaignSettings.scss
+++ b/src/components/CampaignSettings/CampaignSettings.scss
@@ -57,7 +57,7 @@
   }
 }
 
-.btn.btn-custom.goliveRight{
+.btn.btn-outline-primary.goliveRight{
       position: absolute;
       right: 0;
       bottom: 5px;
